# TensorBase

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  LICENSE  License.txt  README.md
src/: CMakeLists.txt
src/examples/: CMakeLists.txt  executables.cmake
src/examples/source/: BenchmarkArray.cpp  BenchmarkArrayCpu.cpp  BenchmarkArrayGpu.cu  BenchmarkDataFrame.cpp  BenchmarkDataFrameCpu.cpp  BenchmarkDataFrameGpu.cu  BenchmarkGraph.cpp  BenchmarkGraphCpu.cpp  BenchmarkGraphGpu.cu  BenchmarkPixels.cpp  BenchmarkPixels.h  BenchmarkPixelsCpu.cpp  BenchmarkPixelsGpu.cu  CUDA_example.cu  pixels_benchmark.cpp
src/tensorbase/: CMakeLists.txt  cmake_findExternalLibs.cmake  configh.cmake  includes.cmake
src/tensorbase/include/TensorBase/: config.h.in  tensorbase_data_path.h.in  tensorbase_package_version.h.in
src/tensorbase/include/TensorBase/benchmarks/: BenchmarkArray.h  BenchmarkArrayCpu.h  BenchmarkArrayDefaultDevice.h  BenchmarkArrayGpu.h  BenchmarkDataFrame.h  BenchmarkDataFrameCpu.h  BenchmarkDataFrameDefaultDevice.h  BenchmarkDataFrameGpu.h  BenchmarkGraph.h  BenchmarkGraphCpu.h  BenchmarkGraphDefaultDevice.h  BenchmarkGraphGpu.h  BenchmarkPixels.h  BenchmarkPixelsCpu.h  BenchmarkPixelsDefaultDevice.h  BenchmarkPixelsGpu.h  BenchmarkTensorArray.h  sources.cmake
src/tensorbase/include/TensorBase/core/: AssertGpu.h  GraphAlgorithms.h  GraphAlgorithmsCpu.h  GraphAlgorithmsDefaultDevice.h  GraphAlgorithmsGpu.h  (+10 more)
src/tensorbase/source/core/: Helloworld.cpp  sources.cmake
src/tensorbase/source/io/: CSVWriter.cpp  sources.cmake
src/tests/: CMakeLists.txt
src/tests/class_tests/: CMakeLists.txt
src/tests/class_tests/tensorbase/: CMakeLists.txt  executables.cmake
src/tests/coding/: CMakeLists.txt
(+123 files in other folders)
